[metadata]
name = quokka
author = Bruno Rocha
author-email = rochacbruno@gmail.com
home-page = https://github.com/rochacbruno/quokka
requires-python = >=3.6
summary = Content Management Framework for Python 
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
project_urls =
    Bug Tracker = https://github.com/rochacbruno/quokka
    Documentation = https://github.com/rochacbruno/quokka
    Source Code = https://github.com/rochacbruno/quokka
license = BSD License
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
keywords = cms content management flask static site blog

[files]
packages =
    quokka

[entry_points]
console_scripts =
    quokka = quokka.cli:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1
